Task3_hard_code/rt_ngw.tf
// RT Association
resource "aws_route_table" "rt_ngw" {
  vpc_id = "${aws_vpc.main.id}"
  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = "${aws_nat_gateway.ngw.id}"
  }

  tags = {
    Name = "rt_ngw"
    Environment = "Dev"
    Department = "IT"
    Team = "Infrastructure"
    Created_by = "Silvia_Rotari"
  }
}
